@@ -88,11 +88,13 @@ JavaSyntaxKit.Action.COMBO_COMPELTION = jsyntaxpane.actions.ComboCompletionActio
 JavaSyntaxKit.Completions.File = jsyntaxpane.javasyntaxkit.completions
 #
 # These are the completions to be in the IntelliSense completion dialog
-# comma separated values
+# comma separated values.
+# Vertical bars: if there is one, it will position the cursor.  If there are
+# two, they will be start and end of selection
 JavaSyntaxKit.COMBO_COMPELTION.Items = public, protected, private, class, static, \
   .toString(), .equals(|), .hashCode(), \
   JTextField, JEditorPane, JTextPane, JComboBox, JList, JTree, \
-  jsyntaxpane, setContentType, setProperty
+  jsyntaxpane, .setContentType("text/|lang|"), .setProperty("|key|")
 #
 # Other Java type actions for other languages:
 #
